fix: Adjust sidebar accent color for improved visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,7 +39,7 @@
     --sidebar-foreground: 240 5.3% 26.1%;
     --sidebar-primary: 240 5.9% 10%;
     --sidebar-primary-foreground: 0 0% 98%;
-    --sidebar-accent: 234 98% 98%;
+    --sidebar-accent: 234 80% 93%;
     --sidebar-accent-foreground: 221 99% 35%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 240 5.9% 10%;
